--- a/streaming/flink/t_back_account.yaml
+++ b/streaming/flink/t_back_account.yaml
@@ -31,8 +31,8 @@ spec:
       memory: "2048m"
 
   job:
-    # jarURI: local:///opt/flink/lib/cdc-kafka-starrocks-1.0-SNAPSHOT.jar
-    jarURI: s3a://asset/flink-job/cdc-kafka-starrocks-1.0-SNAPSHOT.jar
+    jarURI: local:///opt/flink/lib/cdc-kafka-starrocks-1.0-SNAPSHOT.jar
+    # jarURI: s3a://asset/flink-job/cdc-kafka-starrocks-1.0-SNAPSHOT.jar
     entryClass: org.mbs.DimBackAccount
     parallelism: 2
     upgradeMode: savepoint  
