--- a/streaming/flink/t_back_account.yaml
+++ b/streaming/flink/t_back_account.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cdc-sql-dim-back-account
   namespace: cdc
 spec:
-  image: ghostwood/flink-mbs:1.1.2
+  image: chiennc4805/flink-mbs:1.0.11
   flinkVersion: v1_18
   serviceAccount: flink   
 
@@ -31,7 +31,7 @@ spec:
       memory: "2048m"
 
   job:
-    jarURI: local:///opt/flink/lib/cdc-kafka-starrocks-1.0-SNAPSHOT.jar
+    jarURI: local:///opt/flink/lib/streaming-starrocks-1.0-SNAPSHOT.jar
     # jarURI: s3a://asset/flink-job/cdc-kafka-starrocks-1.0-SNAPSHOT.jar
     entryClass: org.mbs.DimBackAccount
     parallelism: 2
